--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
-  "name": "spirokit-ts-blank",
+  "name": "@spirokit/expo-template",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "keywords": [
+    "react",
+    "expo",
+    "template",
+    "typescript",
+    "spirokit"
+  ],
+  "description": "Base js template for expo with Spirokit",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/spirokit/expo-template.git"
+  },
+  "license": "MIT",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +22,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.2",
     "expo": "~46.0.9",
+    "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-heroicons": "2.0.2",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-svg": "12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "bugs": {
+    "url": "https://github.com/spirokit/templates/issues"
+  },
+  "homepage": "https://github.com/spirokit/templates#readme",
+  "author": "Mauro Garcia"
 }
