--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@babel/core": "^7.12.9"
   },
   "bugs": {
-    "url": "https://github.com/spirokit/templates/issues"
+    "url": "https://github.com/spirokit/expo-template/issues"
   },
-  "homepage": "https://github.com/spirokit/templates#readme",
+  "homepage": "https://github.com/spirokit/expo-template#readme",
   "author": "Mauro Garcia"
 }
