--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spirokit/expo-template",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "node_modules/expo/AppEntry.js",
   "keywords": [
     "react",
@@ -23,14 +23,17 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
+    "@expo/webpack-config": "^0.17.0",
     "expo": "~46.0.9",
     "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.5",
     "react-native-heroicons": "2.0.2",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-svg": "12.3.0"
+    "react-native-svg": "12.3.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
