--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@spirokit/expo-template",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "node_modules/expo/AppEntry.js",
   "keywords": [
     "react",
@@ -33,7 +33,7 @@
     "react-native-heroicons": "2.0.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-svg": "12.3.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "0.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
